# entity-disambiguation

./: .gitignore  .pre-commit-config.yml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test-pr.yml
.history/: .pre-commit-config_20200926003122.yml
Baseline/: Baseline_anchor_stats.ipynb
EDA/: EDA_KDWD.ipynb  KDWD_EDA.ipynb  KWNLP.ipynb  aida-conll-yago_EDA.ipynb  exploring_wikipedia2vec.ipynb
entity_disambiguation/: Model_Running.ipynb  preprocessing.py
notebooks/: README.md  preprocess_and_baseline.ipynb
notebooks/EDA/: EDA_KDKG.ipynb  EDA_KDWD.ipynb  EDA_KWNLP.ipynb  EDA_aida-conll-yago.ipynb  explore_wikipedia2vec.ipynb
notebooks/baselines/: baseline_anchor_stats.ipynb
notebooks/demos/: ProcessACYforCongruence.ipynb  basic_pipeline.ipynb  preprocess_and_baseline.ipynb  wikipedia2vec_pipeline.ipynb
notebooks/dev/: 2b_wikipedia2vec_mostsimilar_colab300.ipynb  3b_wikipedia2vec_mostsimilar_colab300.ipynb  3b_wikipedia2vec_mostsimilar_colab500.ipynb  baseline_anchor_stats.ipynb  ingest_congruence.ipynb  process_kdwd.ipynb
notebooks/pipeline/: 1_process_acy_input.ipynb  2_w2v_get_entities.ipynb  2_wikipedia2vec_baseline.ipynb  2a_anchor_links.ipynb  2b_wikipedia2vec_mostsimilar.ipynb  3a_anchor_links-Copy1.ipynb  3a_anchor_links.ipynb  3a_centroid_congruence.ipynb  3a_generate_similar_entities.ipynb  3b_vector_congruence.ipynb  3b_wikipedia2vec_mostsimilar.ipynb  3c_graph_congruence.ipynb  4_apply_congruence.ipynb  4a2_vector_congruence_prior.ipynb  4a3_vector_congruence_centroid.ipynb  4a_congruence_graph_expansion.ipynb  README.md  (+10 more)
predictions/: .gitignore
tests/: test_entity_disambiguation.py
(+2 files in other folders)
