[tool.poetry]
name = "entity-disambiguation"
version = "0.1.0"
description = ""
authors = ["Johannes Kolberg <johannes.kolberg@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
numpy = "1.18.0"
tensorflow = "2.3.1"
keras = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
