[tool.poetry]
name = "entity-disambiguation"
version = "0.1.0"
description = ""
authors = ["Johannes Kolberg <johannes.k.kolberg@gmail.com>"]

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # this makes sort all Python files
known_third_party = ["numpy", "pandas"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
numpy = "1.18.0"
tensorflow = "2.3.1"
keras = "^2.4.3"
nltk = "^3.5"
ipykernel = "^5.3.4"
gensim = "^3.8.3"
wikipedia2vec = "^1.0.4"
pyemd = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.7.1"
pytest-cov = "^2.10.1"
black = "^20.8b1"
mypy = "^0.782"
isort = "^5.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
